force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Adjustment_Entry_Bill_Id__c.field-meta.xml
<CustomField>
    <fullName>loan__Adjustment_Entry_Bill_Id__c</fullName>
    <description>Bill created due to adjustment entry creation.</description>
    <inlineHelpText>Bill created due to adjustment entry creation.</inlineHelpText>
    <label>Adjustment Entry Bill Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>