force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Adjustment_Entry_Charge_Ids__c.field-meta.xml
<CustomField>
    <fullName>loan__Adjustment_Entry_Charge_Ids__c</fullName>
    <description>Charges created due to adjustment entry creation.</description>
    <inlineHelpText>Charges created due to adjustment entry creation.</inlineHelpText>
    <label>Adjustment Entry Charge Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>