force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Adjustment_Entry_IPT_Id__c.field-meta.xml
<CustomField>
    <fullName>loan__Adjustment_Entry_IPT_Id__c</fullName>
    <description>IPT created due to adjustment entry creation.</description>
    <inlineHelpText>IPT created due to adjustment entry creation.</inlineHelpText>
    <label>Adjustment Entry IPT Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>