force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Adjustment_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Adjustment_Interest_Amount__c</fullName>
    <description>The additional amount to be added as due amount because of this reversal.</description>
    <inlineHelpText>The additional amount to be added as due amount because of this reversal.</inlineHelpText>
    <label>Adjustment Interest Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>