force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Adjustment_Txn_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Adjustment_Txn_Date__c</fullName>
    <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
    <description>Adjustment Txn Date</description>
    <inlineHelpText>Adjustment Txn Date</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>