force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Balance__c.field-meta.xml
<CustomField>
    <fullName>loan__Balance__c</fullName>
    <inlineHelpText>This is the principal balance on the loan after this transaction has been applied.</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>