force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Internal_Accounting_Generated__c.field-meta.xml
<CustomField>
    <fullName>loan__Internal_Accounting_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Accounting Entry for  this transaction is created or not.</description>
    <inlineHelpText>Indicates if Accounting Entry for  this transaction is created or not.</inlineHelpText>
    <label>Internal Accounting Generated</label>
    <type>Checkbox</type>
</CustomField>