force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Is_An_Adjustment_Entry__c.field-meta.xml
<CustomField>
    <fullName>loan__Is_An_Adjustment_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the transaction is an Adjustment Entry.</description>
    <inlineHelpText>If the transaction is an Adjustment Entry.</inlineHelpText>
    <label>Is An Adjustment Entry</label>
    <type>Checkbox</type>
</CustomField>