force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Is_Backdated__c.field-meta.xml
<CustomField>
    <fullName>loan__Is_Backdated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will represent whether the Reversal is backdated.</description>
    <inlineHelpText>This field will represent whether the Reversal is backdated.</inlineHelpText>
    <label>Is Backdated</label>
    <type>Checkbox</type>
</CustomField>