force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Loan_Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Payment_Transaction__c</fullName>
    <description>Loan Payment Transaction</description>
    <inlineHelpText>Loan Payment Transaction</inlineHelpText>
    <label>Loan Payment Transaction</label>
    <referenceTo>loan__Loan_Payment_Transaction__c</referenceTo>
    <relationshipName>Repayment_Transaction_Adjustment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>