force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Payment_Type__c</fullName>
    <formula>TEXT(loan__Loan_Payment_Transaction__r.loan__Payment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Type</label>
    <type>Text</type>
</CustomField>