force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Payoff_Balance__c.field-meta.xml
<CustomField>
    <fullName>loan__Payoff_Balance__c</fullName>
    <inlineHelpText>This is the amount needed to payoff this loan after this transaction has been applied.</inlineHelpText>
    <label>Payoff Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>