force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Principal__c.field-meta.xml
<CustomField>
    <fullName>loan__Principal__c</fullName>
    <formula>loan__Loan_Payment_Transaction__r.loan__Principal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>