force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Product_Code__c.field-meta.xml
<CustomField>
    <fullName>loan__Product_Code__c</fullName>
    <description>Field stores unique product code of a Lending Product</description>
    <formula>loan__Loan_Payment_Transaction__r.loan__Loan_Account__r.loan__Loan_Product_Name__r.loan__Loan_Product_Code__c</formula>
    <inlineHelpText>Field stores unique product code of a Lending Product</inlineHelpText>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>