force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Receipt_ID__c.field-meta.xml
<CustomField>
    <fullName>loan__Receipt_ID__c</fullName>
    <displayFormat>RATID-{0000000000}</displayFormat>
    <label>Receipt ID</label>
    <type>AutoNumber</type>
</CustomField>