force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Refund_ACH_Filename__c.field-meta.xml
<CustomField>
    <fullName>loan__Refund_ACH_Filename__c</fullName>
    <label>Refund ACH Filename</label>
    <length>100</length>
    <type>Text</type>
</CustomField>