force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Refund_Sent_To_ACH__c.field-meta.xml
<CustomField>
    <fullName>loan__Refund_Sent_To_ACH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Reversal was set for Refund, the Refund was sent to ACH .</description>
    <label>Refund Sent To ACH</label>
    <type>Checkbox</type>
</CustomField>