force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Refund_Sent_To_ACH_On__c.field-meta.xml
<CustomField>
    <fullName>loan__Refund_Sent_To_ACH_On__c</fullName>
    <label>Refund Sent To ACH On</label>
    <type>Date</type>
</CustomField>