force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Refund_to_Borrower__c.field-meta.xml
<CustomField>
    <fullName>loan__Refund_to_Borrower__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this amount be processed to pay back to borrower</description>
    <label>Refund to Borrower</label>
    <type>Checkbox</type>
</CustomField>