force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Reversal_Time__c.field-meta.xml
<CustomField>
    <fullName>loan__Reversal_Time__c</fullName>
    <label>Reversal Time</label>
    <type>DateTime</type>
</CustomField>