force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Signed_Adjusted_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Signed_Adjusted_Amount__c</fullName>
    <formula>loan__Loan_Payment_Transaction__r.loan__Transaction_Amount__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signed Adjusted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>