force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Transaction_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Transaction_Creation_Date__c</fullName>
    <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
    <description>It stores the transaction creation date.</description>
    <inlineHelpText>It stores the transaction creation date.</inlineHelpText>
    <label>Transaction Creation Date</label>
    <type>Date</type>
</CustomField>