force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/Return_Code__c.field-meta.xml
<CustomField>
    <fullName>Return_Code__c</fullName>
    <label>Return Code</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>